# follow-tail

./: .gitignore  ChangeLog.md  LICENSE  README.md  follow-tail.cabal  package.yaml  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-lts-9.yaml
example/: Main.hs
src/System/IO/: FollowTail.hs
src/System/IO/FollowTail/: Internal.hs
